Fixed getImageData bug by putting a 200ms timeout before each request and forcing the requests into a queue so that they don't overlap. Also, minor css bugfixes.

--- a/index.css
+++ b/index.css
@@ -56,12 +56,14 @@ html, body {
 	opacity: 0.4;
 	top: 5px;
 	left: 50%;
+	width: 0px;
 	z-index: 2;
 }
 #mosaic {
 	position: relative;
 	padding-top: 5px;
 	left: 50%;
+	width: 0px;
 }
 #largeImage {
 	position: absolute;
